<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Voter Registration</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Status">Status</string>
    <string name="lastName">Pleae enter Last Name</string>
    <string name="firstName">Pleae enter First Name</string>
    <string name="flurry_api_key">B73GP7QSBPWRNWXWCRX4</string>
    <string name="titlep1">MARYLAND VOTER</string>
    <string name="titlep2">REGISTRATION APPLICATION</string>
    <string name="pollingquestions1">Check here if you would like information on polling place assistance for elderly, disabled or voters unable to write or read the ballot.</string>
    <string name="pollingquestions2">Check here if you would like information on working as an election judge for your County Board of Elections.</string>
    <string name="signature"> Under penalty of perjury, I hereby swear or affirm: I am a U.S. citizen. ■I am a Maryland resident. ■I am at least 16 years old. ■I have not been convicted of buying or selling votes. ■I have not been convicted of a felony, or if I have, I have completed serving a court-ordered sentence of imprisonment, including any term of parole or probation for the conviction. The information in this application is true to the best of my knowledge, information and belief.</string>
    <string name="questions1">Visit the State Board of Elections website at www.elections.maryland.gov to verify your registration, find your polling place, and find out other important information. If you have any questions, call your County Board of Elections or the State Board of Elections at the numbers listed on the back of the application.</string>
    <string name="questions2"> If you register to vote, the identity of the office at which the application is submitted will remain confidential and will be used only for voter registration purposes.</string>
    <string name="warning"> Giving false information to obtain voter registration is perjury and punishable by a fine of up to $1,000, or by imprisonment for up to 5 years, or both.</string>
    <string name="personalrecords">Personal Records\nNotice/Confidentiality</string>
    <string name="personalrecordsdetals">This form collects personal information for voter registration purposes. If you are not registered to vote and you refuse to provide this information, you will not be allowed to vote in Maryland. You may update your voter registration at any time at your County Board of Elections. Except for items specified as confidential, voter registration records are generally available for public inspection; they may also be shared with jury commissioners/clerks or other government agencies as provided by law. The law prohibits use of voter registration records for commercial solicitation purposes. If you decline to register to vote, that fact will remain confidential and will be used only for voter registration purposes.</string>
    <string name="personalrecordsdetals2">If you register to vote, the identity of the office at which the application is submitted will remain confidential and will be used only for voter registration  purposes.</string>
    <string name="toregister">■Be a U.S. citizen;\n■Be a Maryland resident;\n■Be at least 16 years old*;\n■Not be under guardianship for mental disability or if you are, you have not been found by a court to be unable to communicate a desire to vote;\n■Not have been convicted of buying or selling votes;\n■Not have been convicted of a felony, or if you have, you have completed serving a court-ordered sentence of imprisonment,including any term of parole or probation for the conviction.\n*you may register to vote if you are at least 16 years old but cannot vote unless you will be at least 18 years old by the next general election.</string>
    <string name="deadlineinformation">■This application must be postmarked no later than 21 days before an election.\n■If your application is complete and you are found to be qualified, a Voter Notification Card will be mailed to you.\n■The submission of this form to an individual other than an official, employee, or agent of a County Board of Elections does not assure that the form will be submitted or filed in a timely manner.</string>
    <string name="usethisform">■Register to vote in federal, state, county, and municipal elections in Maryland.\n ■Change your name, address, or party affiliation.</string>
    <string name="instraction">■If you do not have a current, valid Maryland driver’s license or MVA ID card, you must enter the last 4 digits of your social security number. The statutory authority allowing officials to request the last 4 digits of your social security number is Election Law Article, § 3-202. The number will only be used for registration and other administrative purposes. It will be kept confidential.\n ■Complete Items 1–11 in Voter Registration Application. Sign and date Item 12. If you are registered to vote in another Maryland county or another state, you must complete Items A–B in Last Voter Registration. \n■You must register with a party if you want to take part in that party’s primary election, caucus or convention. Check one box only.\n■Address and mail the application to your County Board of Elections, using the list on the back panel.</string>
    <string name="StreetNumber">Pleae enter Street Number</string>
    <string name="StreetName">Pleae enter Street Name</string>
    <string name="Apt">Pleae enter Apt</string>
    <string name="CityTown">Pleae enter City / Town</string>
    <string name="ZipCode">Pleae enter Zip Code</string>
    <string name="County">Pleae enter County</string>
     <string name="Mailingaddress">Pleae enter Mailing address</string>
     <string name="Signature">Pleae enter Signature</string>

</resources>